--- a/Cabriolet.css
+++ b/Cabriolet.css
@@ -113,6 +113,9 @@ header{
     text-decoration: none;
     font-size: 16px;
 }
+.main-nav ul li a:hover{
+    color: white;
+}
 .main-container {
         margin-top: 30px;
         width: 100%;
