--- a/Purchase/assets/css/style.css
+++ b/Purchase/assets/css/style.css
@@ -111,7 +111,9 @@ header{
     text-decoration: none;
     font-size: 16px;
 }
-
+.main-nav ul li a:hover{
+    color: white;
+}
 body {
     height : auto;
 }
