--- a/car-Vclass.css
+++ b/car-Vclass.css
@@ -117,9 +117,9 @@ header{
     text-decoration: none;
     font-size: 16px;
 }
-
-
-
+.main-nav ul li a:hover{
+    color: white;
+}
 .Vclass-img{
     width: 100%;
     height: 500px;
