--- a/insurance.css
+++ b/insurance.css
@@ -111,6 +111,9 @@ header{
     text-decoration: none;
     font-size: 16px;
 }
+.main-nav ul li a:hover{
+    color: white;
+}
 main .article-1{
     background: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)), 
     url('Mtr/image/img3_1.png');
