--- a/onlineservice.css
+++ b/onlineservice.css
@@ -113,6 +113,9 @@ header{
     text-decoration: none;
     font-size: 16px;
 }
+.main-nav ul li a:hover{
+    color: white;
+}
 main .main-article{
     background-image: url("Mtr/image/background-os.png");
     width: 100%;
