--- a/preferential.css
+++ b/preferential.css
@@ -111,7 +111,9 @@ header{
     text-decoration: none;
     font-size: 16px;
 }
-
+.main-nav ul li a:hover{
+    color: white;
+}
 main .article_1{
     background-color: black;
     width: auto;
