--- a/style.css
+++ b/style.css
@@ -117,7 +117,9 @@ header{
     text-decoration: none;
     font-size: 16px;
 }
-
+.main-nav ul li a:hover{
+    color: white;
+}
 .head-bigVideoDemo{
     padding: 0%;
     margin: 0;
